--- a/bower.json
+++ b/bower.json
@@ -18,41 +18,6 @@
   "dependencies": {
     "bootstrap": "~3.2.0",
     "jquery": "~2.1.1",
-    "backbone": "~1.1.2",
-    "react": "~0.12.2",
-    "wysihtml": "~0.4.17",
-    "xmldom": "~0.1.16"
-  },
-  "overrides": {
-    "bootstrap": {
-      "main": "dist/**/*.*",
-      "normalize": {
-        "css": [
-          "*.map",
-          "*.css"
-        ],
-        "font": [
-          "*.eot",
-          "*.svg",
-          "*.ttf",
-          "*.woff"
-        ]
-      }
-    },
-    "jquery": {
-      "main": "dist/**/*.*"
-    },
-    "react": {
-      "main": "*.js"
-    },
-    "wysihtml": {
-      "main": [
-        "dist/**/*.*",
-        "parser_rules/advanced_and_extended.js"
-      ]
-    },
-    "xmldom": {
-      "main": ["dom.js"]
-    }
+    "backbone": "~1.1.2"
   }
 }
