--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,18 @@
     "bootstrap": "~3.2.0",
     "jquery": "~2.1.1",
     "backbone": "~1.1.2",
-    "react": "~0.12.2"
+    "react": "~0.12.2",
+    "wysihtml": "~0.4.17"
+  },
+  "overrides": {
+      "bootstrap": {
+          "main": "dist/**/*.*"
+      },
+      "jquery": {
+          "main": "dist/**/*.*"
+      },
+      "react": {
+          "main": "*.js"
+      }
   }
 }
