--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
     "backbone": "~1.1.2",
     "react": "~0.12.2",
     "wysihtml": "~0.4.17",
-    "xmldom": "~0.1.16"
+    "xmldom": "~0.1.16",
+    "react-dnd": "~0.9.3"
   },
   "overrides": {
     "bootstrap": {
@@ -52,7 +53,9 @@
       ]
     },
     "xmldom": {
-      "main": ["dom.js"]
+      "main": [
+        "dom.js"
+      ]
     }
   }
 }
