--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,8 @@
     "wysihtml": "~0.4.17",
     "xmldom": "~0.1.16",
     "react-dnd": "~0.9.3",
-    "typeahead.js": "~0.10.5"
+    "typeahead.js": "~0.10.5",
+    "strftime": "~0.9.0"
   },
   "overrides": {
     "bootstrap": {
@@ -46,6 +47,9 @@
     },
     "react": {
       "main": "*.js"
+    },
+    "strftime": {
+      "main": "strftime-min.js"
     },
     "typeahead.js": {
       "main": "dist/*.*"
