--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
   "dependencies": {
     "backbone": "^1.1.2",
     "bower": "^1.3.12",
+    "browserify": "^9.0.3",
     "del": "^1.1.1",
     "gulp": "^3.8.11",
     "gulp-bower-normalize": "^1.0.3",
+    "gulp-rename": "^1.2.0",
     "jasmine": "^2.2.1",
     "jest-cli": "git://github.com/facebook/jest.git",
     "jquery": "^2.1.1",
     "jsdom": "^3.1.2",
-    "main-bower-files": "^2.5.0"
+    "main-bower-files": "^2.5.0",
+    "react-tools": "^0.13.1",
+    "reactify": "^1.1.0",
+    "vinyl-source-stream": "^1.1.0"
   },
   "scripts": {
     "test": "jasmine"
