--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "bower": "^1.3.12",
     "browserify": "^9.0.3",
     "del": "^1.1.1",
+    "eslint-plugin-react": "^1.6.1",
     "gulp": "^3.8.11",
     "gulp-bower-normalize": "^1.0.3",
     "gulp-eslint": "^0.7.0",
