add icons to js ui

--- a/.eslintrc
+++ b/.eslintrc
@@ -6,11 +6,13 @@
     "_": false,
     "$": false,
     "Backbone": false,
+    "document": false,
     "DOMParser": false,
     "module": false,
     "React": false,
     "ReactDND": false,
     "require": false,
+    "setTimeout": false,
     "strftime": false,
     "window": false,
     "wysihtml5": false,
